-Payment domain object created -Bootsrap for dev environment

--- a/tieto-young-professional-day/tieto-bank-domain/application.properties
+++ b/tieto-young-professional-day/tieto-bank-domain/application.properties
@@ -1,4 +1,5 @@
 #Grails Metadata file
-#Thu Apr 05 13:33:32 CEST 2012
+#Sat Apr 14 00:51:56 PDT 2012
 app.grails.version=2.0.1
 app.name=tieto-bank-domain
+plugins.svn=1.0.1
