--- a/tieto-young-professional-day/tieto-bank-admin/application.properties
+++ b/tieto-young-professional-day/tieto-bank-admin/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Sat Apr 14 00:48:21 PDT 2012
+#Fri Apr 20 15:28:44 CEST 2012
 app.grails.version=2.0.1
 app.name=tieto-bank-admin
 app.servlet.version=2.5
