--- a/tieto-young-professional-day/tieto-bank-owner/application.properties
+++ b/tieto-young-professional-day/tieto-bank-owner/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Sat Apr 14 00:52:10 PDT 2012
+#Fri Apr 20 15:32:22 CEST 2012
 app.grails.version=2.0.1
 app.name=tieto-bank-owner
 app.servlet.version=2.5
